[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name        = "vortelio"
version     = "0.3.49"
description = "Python SDK for Vortelio — run LLMs, images, audio, video & 3D locally. OpenAI & Ollama API compatible."
readme      = "README.md"
license     = { text = "Apache-2.0" }
authors     = [{ name = "Vortelio Contributors" }]
keywords    = [
  "ai", "llm", "local-ai", "local-llm", "offline-ai",
  "ollama", "ollama-alternative", "openai-compatible",
  "stable-diffusion", "flux", "sdxl", "image-generation",
  "whisper", "tts", "stt", "audio", "video-generation", "3d",
  "llama-cpp", "gguf", "huggingface",
  "rag", "embeddings", "multimodal", "ai-agent",
  "privacy", "self-hosted", "cuda", "rocm", "metal",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies    = []   # zero required dependencies — pure stdlib

[project.optional-dependencies]
async = ["aiohttp>=3.8"]

[project.urls]
Homepage    = "https://github.com/metiu1/Vortelio"
Repository  = "https://github.com/metiu1/Vortelio-python_libraries"
"Bug Tracker" = "https://github.com/metiu1/Vortelio/issues"
Changelog   = "https://github.com/metiu1/Vortelio/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where   = ["."]
include = ["vortelio*"]

[tool.setuptools.package-data]
vortelio = ["py.typed"]
